apps/homeassistant/homeassistant-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
