apps/homeassistant/homeassistant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
    app.kubernetes.io/name: homeassistant
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP
  selector:
    app: homeassistant
